--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,5 +1,7 @@
 .container {
   min-height: 60vh;
+  margin: 0;
+  background-color: rgb(10, 2, 61);
   display: flex;
   flex-direction: column;
   align-items: center;
