--- a/src/components/Repos/Repos.module.css
+++ b/src/components/Repos/Repos.module.css
@@ -38,7 +38,7 @@
 }
 .reponame {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 .reponame p {
